--- a/bower.json
+++ b/bower.json
@@ -3,10 +3,10 @@
   "main": "oe-combo.html",
   "dependencies": {
     "polymer": "Polymer/polymer#^1.4.0",
-    "oe-ajax": "http://github.com/EdgeVerve/oe-ajax.git",
-    "oe-input": "http://github.com/EdgeVerve/oe-input.git",
-    "oe-input-error": "http://github.com/EdgeVerve/oe-input-error.git",
-    "oe-field-behavior": "http://github.com/EdgeVerve/oe-field-behavior.git",
+    "oe-ajax": "https://github.com/EdgeVerve/oe-ajax.git",
+    "oe-input": "https://github.com/EdgeVerve/oe-input.git",
+    "oe-input-error": "https://github.com/EdgeVerve/oe-input-error.git",
+    "oe-field-behavior": "https://github.com/EdgeVerve/oe-field-behavior.git",
     "paper-menu": "^1.3.0",
     "paper-item": "^1.2.2",
     "iron-dropdown": "^1.5.6",
@@ -14,7 +14,7 @@
     "paper-material": "^1.0.7",
     "paper-input": "^1.1.24",
     "iron-icons": "^1.2.1",
-    "oe-i18n-msg": "http://github.com/EdgeVerve/oe-i18n-msg.git"
+    "oe-i18n-msg": "https://github.com/EdgeVerve/oe-i18n-msg.git"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
