--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,7 @@
     "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^1.0.0",
     "web-component-tester": "^4.0.0",
     "webcomponentsjs": "webcomponents/webcomponentsjs#^0.7.0",
-    "iron-test-helpers": "^1.4.1"
+    "iron-test-helpers": "^1.4.1",
+    "iron-image": "#1.2.6"
   }
 }
