--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,7 @@
     "oe-ajax": "^1.0.0",
     "oe-input": "^1.0.0",
     "oe-input-error": "^1.0.0",
-    "oe-field-behavior": "http://10.73.97.24/oecloud.io/oe-field-behavior.git#master",
+    "oe-field-behavior": "git+ssh://git@10.73.97.24:oecloud.io/oe-field-behavior.git#master",
     "paper-menu": "^1.3.0",
     "paper-item": "^1.2.2",
     "iron-dropdown": "^1.5.6",
