--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "@polymer/paper-listbox": "3.0.1",
     "@polymer/paper-material": "3.0.1",
     "@polymer/polymer": "3.1.0",
-    "oe-ajax": "git+http://10.73.97.24/polymer-3/oe-ajax.git#master",
-    "oe-i18n-msg": "git+http://10.73.97.24/polymer-3/oe-i18n-msg.git#master",
-    "oe-mixins": "git+http://10.73.97.24/polymer-3/oe-mixins.git#master",
-    "oe-utils": "git+http://10.73.97.24/polymer-3/oe-utils.git#master",
+    "oe-ajax": "git+http://evgit/oecloud.io/oe-ajax.git#master",
+    "oe-i18n-msg": "git+http://evgit/oecloud.io/oe-i18n-msg.git#master",
+    "oe-mixins": "git+http://evgit/oecloud.io/oe-mixins.git#master",
+    "oe-utils": "git+http://evgit/oecloud.io/oe-utils.git#master",
     "promise-polyfill": "8.1.0",
     "web-animations-js": "2.3.1"
   },
@@ -32,7 +32,7 @@
     "@polymer/iron-image": "3.0.1",
     "@polymer/iron-test-helpers": "3.0.1",
     "@webcomponents/webcomponentsjs": "2.2.7",
-    "fakerest": "^2.1.0",
+    "fakerest": "2.1.0",
     "@polymer/test-fixture": "4.0.2",
     "axe-core": "3.1.2",
     "chai": "4.2.0",
