--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "oe-combo",
   "description": "oeCloud implemenetation of combo box with additional behaviors",
   "main": "oe-combo.js",
-  "version": "2.1.0",
+  "version": "2.2.0",
   "scripts": {
     "test": "polymer test --module-resolution node --skip-selenium-install",
     "lint": "eslint .",
@@ -19,10 +19,10 @@
     "@polymer/paper-listbox": "^3.0.1",
     "@polymer/paper-material": "^3.0.1",
     "@polymer/polymer": "^3.1.0",
-    "oe-ajax": "git+http://evgit/oecloud.io/oe-ajax.git#master",
-    "oe-i18n-msg": "git+http://evgit/oecloud.io/oe-i18n-msg.git#master",
-    "oe-mixins": "git+http://evgit/oecloud.io/oe-mixins.git#master",
-    "oe-utils": "git+http://evgit/oecloud.io/oe-utils.git#master",
+    "oe-ajax": "git+http://evgit/oecloud.io/oe-ajax.git#2.2.0",
+    "oe-i18n-msg": "git+http://evgit/oecloud.io/oe-i18n-msg.git#2.2.0",
+    "oe-mixins": "git+http://evgit/oecloud.io/oe-mixins.git#2.2.0",
+    "oe-utils": "git+http://evgit/oecloud.io/oe-utils.git#2.2.0",
     "promise-polyfill": "8.1.0",
     "web-animations-js": "2.3.1"
   },
