--- a/package.json
+++ b/package.json
@@ -10,16 +10,20 @@
   },
   "dependencies": {
     "@polymer/iron-dropdown": "^3.0.1",
+    "@polymer/iron-flex-layout": "^3.0.1",
     "@polymer/iron-icon": "^3.0.1",
     "@polymer/iron-icons": "^3.0.1",
     "@polymer/iron-input": "^3.0.1",
+    "@polymer/paper-checkbox": "^3.1.0",
     "@polymer/paper-dropdown-menu": "^3.0.1",
     "@polymer/paper-input": "^3.0.1",
     "@polymer/paper-item": "^3.0.1",
     "@polymer/paper-listbox": "^3.0.1",
     "@polymer/paper-material": "^3.0.1",
+    "@polymer/paper-menu-button": "^3.0.1",
     "@polymer/polymer": "^3.1.0",
     "oe-ajax": "git+http://evgit/oecloud.io/oe-ajax.git#master",
+    "oe-checkbox": "git+http://evgit/oecloud.io/oe-checkbox.git#master",
     "oe-i18n-msg": "git+http://evgit/oecloud.io/oe-i18n-msg.git#master",
     "oe-mixins": "git+http://evgit/oecloud.io/oe-mixins.git#master",
     "oe-utils": "git+http://evgit/oecloud.io/oe-utils.git#master",
